--- a/src/main/resources/at/ac/dbisinformatik/snowprofile/web/resources/login.html
+++ b/src/main/resources/at/ac/dbisinformatik/snowprofile/web/resources/login.html
@@ -1,15 +1,12 @@
 <html>
 <head>
     <title>Schneeprofil Verwaltung</title>
-
-    <!-- <link rel="stylesheet" type="text/css" href="ext-4.1.0/resources/css/ext-all.css"> -->
-    <!-- <script type="text/javascript" src="ext-4.1.0/ext-all-dev.js"></script> -->
-    <link rel="stylesheet" type="text/css" href="ext-4.1.1a/resources/css/ext-all.css">
-    <script type="text/javascript" src="ext-4.1.1a/ext-all-dev.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://cdn.sencha.com/ext-4.1.1a-gpl/resources/css/ext-all.css">
+    <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.com/ext-4.1.1a-gpl/ext-all.js"></script>
+    <script type="text/javascript" charset="utf-8" src="http://cdn.sencha.com/ext-4.1.1a-gpl/locale/ext-lang-de.js"></script>
     <script type="text/javascript">
     	Ext.Loader.setConfig({enabled:true});
     </script>
-    <!-- <script type="text/javascript" src="ext-4.1.0/locale/ext-lang-de.js"></script> -->
     <script type="text/javascript" src="login.js"></script>
 </head>
 <body></body>
